--- a/ConcessionariaAPI/Views/Vendas/Index.cshtml
+++ b/ConcessionariaAPI/Views/Vendas/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<ConcessionariaAPI.Models.Venda>;
-
+@{
+    ViewData["Title"] = "Vendas";
+}
 <h1>Vendas</h1>
 <p>
     <a asp-action="Create">Cadastrar Venda</a>
