finalizada listagem de vendas

--- a/ConcessionariaAPI/Views/Home/Index.cshtml
+++ b/ConcessionariaAPI/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="jumbotron">
+        <h1 class="display-4">Seja Bem-Vindo!</h1>
+        <p class="lead">Esse é um projeto de API criado em .net com entity framework e SQL SERVER que visa implementar as principais funcionalidades de uma concessionária</p>
+    </div>
 </div>
