--- a/ConcessionariaAPI/Views/Vendas/Index.cshtml
+++ b/ConcessionariaAPI/Views/Vendas/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <h1>Vendas</h1>
 <p>
-    <a asp-action="Create">Cadastrar Venda</a>
+   <!-- <a asp-action="Create">Cadastrar Venda</a> -->
 </p>
 @if (Model.Count == 0)
 {
@@ -32,8 +32,8 @@ else
                     <td>@(venda.Vendedor != null ? venda.Vendedor.Nome : "")</td>
                     <td>
                         <a asp-action="Details" asp-route-id="@venda.VendaId">Detalhes</a>
-                        <a asp-action="Edit" asp-route-id="@venda.VendaId">Editar</a>
-                        <a asp-action="ConfirmDelete" asp-route-id="@venda.VendaId">Delete</a>
+                        <!-- <a asp-action="Edit" asp-route-id="@venda.VendaId">Editar</a>
+                        <a asp-action="ConfirmDelete" asp-route-id="@venda.VendaId">Delete</a>-->
                     </td>
                 </tr>
             }
